[jvm-execution] VM options completion: suggest options on empty prompt
GitOrigin-RevId: f491c6e25a01f0e4f323749a5ad8d8611a640b25